# cv_qt_camera

./: CMakeLists.txt  cv_camera.cpp  cv_camera.h  main.cpp
